common/src/test/resources/judge-errors/javascript/runtime-typeerror.txt
/box/script.js:5
    return x.length;
             ^

TypeError: Cannot read properties of null (reading 'length')
    at solve (/box/script.js:5:14)
    at Object.<anonymous> (/box/script.js:10:13)
